--- a/polybar/config
+++ b/polybar/config
@@ -1,224 +1,286 @@
 ;==========================================================
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
+;   Polybar https://github.com/polybar/polybar
 ;==========================================================
 
+;==========================================================
 [colors]
-background = #70000000
-background-alt = #20000000
-background-alt-alt = #50000000
-foreground = #dfdfdf
-foreground-alt = #555
+;==========================================================
 
-gold   = #FFD700
-white  = #FFFFFF
-red    = #FF0000
-lblue  = #3597F0
-black  = #000000
-dgrey  = #2E2E2E
-grey   = #929292
-salmon = #FF8393
+background =                        #70000000
+background-alt =                    #20000000
+background-alt-alt =                #50000000
+foreground =                        #dfdfdf
+foreground-alt =                    #555
 
+gold   =                            #FFD700
+white  =                            #FFFFFF
+red    =                            #FF0000
+lblue  =                            #3597F0
+black  =                            #000000
+dgrey  =                            #2E2E2E
+grey   =                            #929292
+salmon =                            #FF8393
+
+;==========================================================
 [bar/master]
-height = 25
-width = 100%
-radius = 0.0
-fixed-center = true
+;==========================================================
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+height =                            25
+width =                             100%
+radius =                            0.0
+fixed-center =                      true
 
-border-left-size = 8
-border-right-size = 8
-border-top-size = 2
-border-bottom-size = 0
-border-color = #00000000
+background =                        ${colors.background}
+foreground =                        ${colors.foreground}
 
-padding-left = 2
-padding-right = 2
+line-size =                         4
+line-color =                        ${colors.background}
 
-module-margin-left = 1
-module-margin-right = 1
+border-left-size =                  8
+border-right-size =                 8
+border-top-size =                   2
+border-bottom-size =                0
+border-color =                      #00000000
 
-font-0 = Noto Sans Regular:size=12;3
-font-1 = Font Awesome 5 Free Solid:style=Solid:size=12;3
-font-2 = Weather Icons:size=12;2
-enable-ipc = true
+padding-left =                      2
+padding-right =                     2
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+module-margin-left =                1
+module-margin-right =               1
 
+font-0 =                            Noto Sans Regular:size=11;3
+font-1 =                            Font Awesome 5 Free:style=Solid:size=12;3
+font-2 =                            Weather Icons:size=12;2
+
+enable-ipc =                        true
+
+cursor-click =                      pointer
+cursor-scroll =                     ns-resize
+
+;==========================================================
 [bar/bar1]
-inherit =bar/master
-monitor = DVI-D-0
+;==========================================================
 
-modules-left = disco i3 xwindow
-modules-center = just-date
-modules-right = openweathermap-fullfeatured network-traffic
+inherit =                           bar/master
+monitor =                           DVI-D-0
 
-tray-position = none
+modules-left =                      disco i3
+modules-center =                    popup-calendar
+modules-right =                     openweathermap-fullfeatured network-traffic
 
+tray-position =                     none
+
+;==========================================================
 [bar/bar2]
-inherit =bar/master
-monitor = HDMI-0
+;==========================================================
 
-modules-left = disco i3 xwindow
-modules-center = just-time
-modules-right = f1 f2 f3 f4 f5 memory cpu
+inherit =                           bar/master
+monitor =                           HDMI-0
 
-tray-position = right
-tray-padding = 1
-tray-maxsize = 18
+modules-left =                      disco i3
+modules-center =                    just-time
+modules-right =                     f1 f2 f3 f4 f5 memory cpu 
 
+tray-position =                     right
+tray-padding =                      1
+tray-maxsize =                      20
+
+;==========================================================
 [module/disco]
-type = custom/text
-content = 
+;==========================================================
 
+type =                              custom/text
+content =                           
+content-foreground =                ${colors.gold}
+
+;==========================================================
 [module/xwindow]
-type = internal/xwindow
-format-foreground = ${colors.gold}
-label = %title:0:30:...%
-format-prefix ="  "
+;==========================================================
 
+type =                              internal/xwindow
+format-foreground =                 ${colors.gold}
+label =                             %title:0:30:...%
+format-prefix =                     "  "
+
+;==========================================================
 [module/f1]
-type = internal/fs
-interval = 25
-fixed-values = true
+;==========================================================
 
-mount-0 = /
+type =                              internal/fs
+interval =                          25
+fixed-values =                      true
 
-label-mounted = %{F#3597F0}root:%{F-} %percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+mount-0 =                           /
 
+label-mounted =                     %{F#3597F0}root:%{F-} %percentage_used:02%%
+label-unmounted =                   %mountpoint% not mounted
+label-unmounted-foreground =        ${colors.foreground-alt}
+
+;==========================================================
 [module/f2]
-type = internal/fs
-interval = 25
-fixed-values = true
+;==========================================================
 
-mount-0 = /home
+type =                              internal/fs
+interval =                          25
+fixed-values =                      true
 
-label-mounted = %{F#3597F0}home:%{F-} %percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+mount-0 =                           /home
 
+label-mounted =                     %{F#3597F0}home:%{F-} %percentage_used:02%%
+label-unmounted =                   %mountpoint% not mounted
+label-unmounted-foreground =        ${colors.foreground-alt}
+
+;==========================================================
 [module/f3]
-type = internal/fs
-interval = 25
-fixed-values = true
+;==========================================================
 
-mount-0 = /mnt/Gog
+type =                              internal/fs
+interval =                          25
+fixed-values =                      true
 
-label-mounted = %{F#3597F0}Gog:%{F-} %percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+mount-0 =                           /mnt/Gog
 
+label-mounted =                     %{F#3597F0}Gog:%{F-} %percentage_used:02%%
+label-unmounted =                   %mountpoint% not mounted
+label-unmounted-foreground =        ${colors.foreground-alt}
+
+;==========================================================
 [module/f4]
-type = internal/fs
-interval = 25
-fixed-values = true
+;==========================================================
 
-mount-0 = /mnt/Magog
+type =                              internal/fs
+interval =                          25
+fixed-values =                      true
 
-label-mounted = %{F#3597F0}Magog:%{F-} %percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+mount-0 =                           /mnt/Magog
 
+label-mounted =                     %{F#3597F0}Magog:%{F-} %percentage_used:02%%
+label-unmounted =                   %mountpoint% not mounted
+label-unmounted-foreground =        ${colors.foreground-alt}
+
+;==========================================================
 [module/f5]
-type = internal/fs
-interval = 25
-fixed-values = true
+;==========================================================
 
-mount-0 = /mnt/Angel
+type =                              internal/fs
+interval =                          25
+fixed-values =                      true
 
-label-mounted = %{F#3597F0}Angel:%{F-} %percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+mount-0 =                           /mnt/Angel
 
+label-mounted =                     %{F#3597F0}Angel:%{F-} %percentage_used:02%%
+label-unmounted =                   %mountpoint% not mounted
+label-unmounted-foreground =        ${colors.foreground-alt}
+
+;==========================================================
 [module/i3]
-type = internal/i3
-format = <label-state>
-index-sort = true
-wrapping-scroll = false
+;==========================================================
+
+type =                              internal/i3
+format =                            <label-state>
+index-sort =                        true
+wrapping-scroll =                   false
 
 ; Only show workspaces on the same output as the bar
-pin-workspaces = true
-strip-wsnumbers = true
+pin-workspaces =                    true
+strip-wsnumbers =                   true
 
 ; focused = Active workspace on focused monitor
-label-focused = %name%
-label-focused-foreground = ${colors.lblue}
-label-focused-background = ${colors.background-alt}
-label-focused-padding = 2
+label-focused =                     %name%
+label-focused-foreground =          ${colors.lblue}
+label-focused-background =          ${colors.background-alt}
+label-focused-overline =            ${colors.background}
+label-focused-padding =             2
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %name%
-label-unfocused-foreground = ${colors.grey}
-label-unfocused-background = ${colors.background-alt-alt}
-label-unfocused-padding = 2
+label-unfocused =                   %name%
+label-unfocused-foreground =        ${colors.grey}
+label-unfocused-background =        ${colors.background-alt-alt}
+label-unfocused-overline =          ${colors.background}
+label-unfocused-padding =           2
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %name%
-label-visible-foreground = ${colors.salmon}
-label-visible-background = ${self.label-focused-background}
-label-visible-padding = ${self.label-focused-padding}
+label-visible =                     %name%
+label-visible-foreground =          ${colors.salmon}
+label-visible-background =          ${colors.background-alt}
+label-visible-overline =            ${colors.background}
+label-visible-padding =             2
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %name%
-label-urgent-background = ${colors.red}
-label-urgent-padding = 2
+label-urgent =                      %name%
+label-urgent-background =           ${colors.red}
+label-urgent-padding =              2
 
 ; Separator in between workspaces
-; label-separator = |
+label-separator =                   " "
 
+;==========================================================
 [module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.red}
-label = %percentage:2%%
+;==========================================================
 
+type =                              internal/cpu
+interval =                          2
+format-prefix =                     "  "
+format-prefix-foreground =          ${colors.red}
+label =                             %percentage:2%%
+
+;==========================================================
 [module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.red}
-label = %percentage_used:2%%
+;==========================================================
 
-[module/just-date]
-type = internal/date
+type =                              internal/memory
+interval =                          2
+format-prefix =                     "  "
+format-prefix-foreground =          ${colors.red}
+label =                             %percentage_used:2%%
+
+;==========================================================
+[module/popup-calendar]
+;==========================================================
+
+type = custom/script
+exec = /mnt/Gog/repos/system/Scripts/polybar-scripts/popup-calendar.sh
 interval = 5
-date = "%A, %d %B %Y"
+click-left = /mnt/Gog/repos/system/Scripts/polybar-scripts/popup-calendar.sh --popup
 
+;==========================================================
 [module/just-time]
-type = internal/date
-interval = 5
-date = "%H:%M"
+;==========================================================
 
+type =                              internal/date
+interval =                          5
+date =                              "%H:%M"
+
+;==========================================================
 [module/openweathermap-fullfeatured]
-type = custom/script
-exec = /mnt/Gog/Scripts/polybar-scripts/openweathermap-fullfeatured.sh
-interval = 600
-label-font = 3
+;==========================================================
 
+type =                              custom/script
+exec =                              /mnt/Gog/Scripts/polybar-scripts/openweathermap-fullfeatured.sh
+interval =                          600
+label-font =                        3
+
+;==========================================================
 [module/network-traffic]
-type = custom/script
-exec = /mnt/Gog/repos/system/Scripts/polybar-scripts/network-traffic.sh
-format-foreground = ${colors.salmon}
-tail = true
+;==========================================================
 
+type =                              custom/script
+exec =                              /mnt/Gog/repos/system/Scripts/polybar-scripts/network-traffic.sh
+format-foreground =                 ${colors.salmon}
+tail =                              true
+format-prefix =                     "  "
+
+;==========================================================
 [settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
+;==========================================================
 
+screenchange-reload =               true
+
+;==========================================================
 [global/wm]
+;==========================================================
+
 margin-top = 0
 margin-bottom = 0
+
+;==========================================================
