--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -311,7 +311,7 @@ active_border_color #4C9277
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-inactive_text_alpha 0.6
+# inactive_text_alpha 0.6
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
