--- a/polybar/config
+++ b/polybar/config
@@ -34,11 +34,10 @@ background =                        ${colors.background}
 foreground =                        ${colors.foreground}
 
 line-size =                         4
-line-color =                        ${colors.background}
 
 border-left-size =                  8
 border-right-size =                 8
-border-top-size =                   2
+border-top-size =                   4
 border-bottom-size =                0
 border-color =                      #00000000
 
@@ -56,7 +55,7 @@ enable-ipc =                        true
 
 cursor-click =                      pointer
 cursor-scroll =                     ns-resize
-
+ 
 ;==========================================================
 [bar/bar1]
 ;==========================================================
@@ -78,7 +77,7 @@ inherit =                           bar/master
 monitor =                           HDMI-0
 
 modules-left =                      disco i3
-modules-center =                    just-time
+modules-center =                    
 modules-right =                     f1 f2 f3 f4 f5 memory cpu 
 
 tray-position =                     right
@@ -212,6 +211,7 @@ label-urgent-padding =              2
 
 ; Separator in between workspaces
 label-separator =                   " "
+label-separator-overline =          ${colors.background}
 
 ;==========================================================
 [module/cpu]
