--- a/i3/config
+++ b/i3/config
@@ -81,6 +81,7 @@ bindsym $mod+Shift+Left                 move left 20 px
 bindsym $mod+Shift+Down                 move down 20 px
 bindsym $mod+Shift+Up                   move up 20 px
 bindsym $mod+Shift+Right                move right 20 px
+bindsym $mod+b                          move position center
 
 # Workspaces
 bindsym $mod+1                          workspace number $ws1
