--- a/i3/config
+++ b/i3/config
@@ -128,13 +128,13 @@ bindsym $mod+F6                         exec --no-startup-id gedit
 bindsym $mod+F7                         exec --no-startup-id audacity
 # Mixxx
 bindsym $mod+F8                         exec --no-startup-id mixxx
-# Cadence
+# Pamac
 bindsym $mod+F9                         exec --no-startup-id pamac-manager
 # Typora
 bindsym $mod+F10                        exec --no-startup-id typora
 # Sticky Terminal
 bindsym $mod+F11                        exec $term --title stickyterm
-# Calculator
+# Gitkraken
 bindsym $mod+F12                        exec --no-startup-id gitkraken
 
 # Close focused window
