--- a/i3/config
+++ b/i3/config
@@ -317,7 +317,6 @@ assign [class="Typora"]                                 workspace number $ws9
 # Autostart
 
 exec --no-startup-id                                    compton --config ~/.config/compton/compton.conf -b &
-exec --no-startup-id                                    nm-applet
 exec --no-startup-id                                    /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id                                    numlockx on
 exec --no-startup-id                                    megasync
@@ -326,8 +325,9 @@ exec --no-startup-id                                    $dpmsoff
 exec --no-startup-id                                    rambox
 exec --no-startup-id 					                sh /home/zero/.fehbg
 exec --no-startup-id 					                cadence --minimized
-exec --no-startup-id                                    udiskie -t
 exec --no-startup-id                                    carla-jack-multi /mnt/Magog/Audio_Projects/carla_default.carxp
+exec_always --no-startup-id                             udiskie -t
+exec_always --no-startup-id                             nm-applet
 exec_always --no-startup-id                             i3altlayout
 exec_always --no-startup-id                             i3wsr
 exec_always --no-startup-id                             $scard
