--- a/polybar/config
+++ b/polybar/config
@@ -7,8 +7,8 @@
 ;==========================================================
 
 background =                        #80000000
-background-alt =                    #80FFD700
-foreground =                        #FFD700
+background-alt =                    #80FFFFFF
+foreground =                        #FFFFFF
 foreground-alt =                    #555555
 
 dgrey  =                            #1A1A1A
@@ -32,7 +32,7 @@ line-size =                         4
 
 border-left-size =                  7
 border-right-size =                 7
-border-top-size =                   4
+border-top-size =                   5
 border-bottom-size =                0
 border-color =                      #00000000
 
@@ -66,6 +66,23 @@ modules-right =                     network-traffic
 tray-position =                     none
 
 ;==========================================================
+[bar/bar1a]
+;==========================================================
+
+inherit =                           bar/bar1
+
+;==========================================================
+[bar/bar1b]
+;==========================================================
+
+inherit =                           bar/bar1
+
+border-left-size =                  0
+border-right-size =                 0
+border-top-size =                   0
+border-bottom-size =                0
+
+;==========================================================
 [bar/bar2]
 ;==========================================================
 
@@ -79,6 +96,24 @@ modules-right =                     f1 f2 f3 f4 f5 memory cpu
 tray-position =                     right
 tray-padding =                      1
 tray-maxsize =                      20
+tray-background =                   #000000
+
+;==========================================================
+[bar/bar2a]
+;==========================================================
+
+inherit =                           bar/bar2
+
+;==========================================================
+[bar/bar2b]
+;==========================================================
+
+inherit =                           bar/bar2
+
+border-left-size =                  0
+border-right-size =                 0
+border-top-size =                   0
+border-bottom-size =                0
 
 ;==========================================================
 [module/time]
@@ -86,6 +121,7 @@ tray-maxsize =                      20
 type =                              internal/date
 time =                              %H:%M
 label =                             %time%
+label-font =                        3
 interval =                          5
 
 ;==========================================================
@@ -249,6 +285,7 @@ format-prefix-font =                2
 type =                              custom/script
 exec =                              /mnt/Gog/repos/system/Scripts/polybar-scripts/popup-calendar.sh
 interval =                          5
+label-font =                        3
 click-left =                        /mnt/Gog/repos/system/Scripts/polybar-scripts/popup-calendar.sh --popup
 
 ;==========================================================
